--- a/index.html
+++ b/index.html
@@ -49,11 +49,18 @@ s0.parentNode.insertBefore(s1,s0);
 <h1>Булат 6<br></h1>
 <p>На этом сайте вы можете увидеть порно с Владом, гей порно с Владом, восточный отсос Влада.
 <p>А самое главное - это 7+ без СМС и Регистраций!</p>
-<a href="https://vk.com/rossovskii" class="btn-icon iconshit">
+<a href="https://vk.com/poda.vladislav" class="btn-icon iconshit">
 <i class="icon fas fa-sign-in-alt" style="font-size: 22px;"> </i>
 <div class="text">
-<h6>ПОЛУЧИТЬ</h6>
-<span>УДОВОЛЬСТВИЕ</span>
+<h6>МОЙ САМЫЙ</h6>
+<span>ГЕЙСКИЙ ВК !</span>
+</div>
+</a>
+<a href="https://www.youtube.com/" class="btn-icon iconshit">
+<i class="icon fas fa-sign-in-alt" style="font-size: 22px;"> </i>
+<div class="text">
+<h6>СКОРО БУДЕТ</h6>
+<span>КАНАЛ НА ЮТУБЕ ! УРА !</span>
 </div>
 </a>
 </div>
@@ -125,7 +132,7 @@ s0.parentNode.insertBefore(s1,s0);
 <i class="fas fa-ambulance" aria-hidden="true"></i>
 </div>
 <div class="media-body text-center">
-<h5 class="mt-4"> </h5>
+<h5 class="mt-4">♥</h5>
 <p> </p>
 </div>
 </div>
@@ -136,7 +143,7 @@ s0.parentNode.insertBefore(s1,s0);
 <i class="fas fa-male" aria-hidden="true"></i>
 </div>
 <div class="media-body text-center">
-<h5 class="mt-4"> </h5>
+<h5 class="mt-4">♥</h5>
 <p> </p>
 </div>
 </div>
@@ -149,7 +156,7 @@ s0.parentNode.insertBefore(s1,s0);
 <i class="fas fa-car" aria-hidden="true"></i>
 </div>
 <div class="media-body text-center">
-<h5 class="mt-4"> </h5>
+<h5 class="mt-4">♥</h5>
 <p> </p>
 </div>
 </div>
@@ -160,7 +167,7 @@ s0.parentNode.insertBefore(s1,s0);
 <i class="fas fa-wrench" aria-hidden="true"></i>
 </div>
 <div class="media-body text-center">
-<h5 class="mt-4"> </h5>
+<h5 class="mt-4">♥</h5>
 <p> </p>
 </div>
 </div>
@@ -171,7 +178,7 @@ s0.parentNode.insertBefore(s1,s0);
 <i class="fas fa-code" aria-hidden="true"></i>
 </div>
 <div class="media-body text-center">
-<h5 class="mt-4"> </h5>
+<h5 class="mt-4">♥</h5>
 <p> </p>
 </div>
 </div>
@@ -182,7 +189,7 @@ s0.parentNode.insertBefore(s1,s0);
 <i class="fas fa-language" aria-hidden="true"></i>
 </div>
 <div class="media-body text-center">
-<h5 class="mt-4"> </h5>
+<h5 class="mt-4">♥</h5>
 <p> </p>
  </div>
 </div>
@@ -193,7 +200,7 @@ s0.parentNode.insertBefore(s1,s0);
 <i class="fas fa-tshirt" aria-hidden="true"></i>
 </div>
 <div class="media-body text-center">
-<h5 class="mt-4"> </h5>
+<h5 class="mt-4">♥</h5>
 <p> </p>
 </div>
 </div>
@@ -204,7 +211,7 @@ s0.parentNode.insertBefore(s1,s0);
 <i class="fas fa-user-shield" aria-hidden="true"></i>
 </div>
 <div class="media-body text-center">
-<h5 class="mt-4"> </h5>
+<h5 class="mt-4">♥</h5>
 <p> </p>
 </div>
 </div>
@@ -215,7 +222,7 @@ s0.parentNode.insertBefore(s1,s0);
 <i class="fas fa-puzzle-piece" aria-hidden="true"></i>
 </div>
 <div class="media-body text-center">
-<h5 class="mt-4"> </h5>
+<h5 class="mt-4">♥</h5>
 <p> </p>
 </div>
 </div>
@@ -226,7 +233,7 @@ s0.parentNode.insertBefore(s1,s0);
 <i class="fas fa-images" aria-hidden="true"></i>
 </div>
 <div class="media-body text-center">
-<h5 class="mt-4"> </h5>
+<h5 class="mt-4">♥</h5>
 <p> </p>
 </div>
 </div>
@@ -237,8 +244,8 @@ s0.parentNode.insertBefore(s1,s0);
 <i class="fas fa-screwdriver" aria-hidden="true"></i>
 </div>
 <div class="media-body text-center">
-<h5 class="mt-4"> </h5>
-<p> </p>
+<h5 class="mt-4">♥ Я ЕЩЕ САМЫЙ ГЕЙСКИЙ ГЕЙ В МИРЕ ♥</h5>
+<p>МНЕ НРАВИТСЯ ИБРАГИМ ♥ ♥ ♥</p>
 </div>
 </div>
  </div>
