--- a/games/pullout.html
+++ b/games/pullout.html
@@ -7,7 +7,7 @@
 ██║░░██║███████╗██║██║░╚███║
 ╚═╝░░╚═╝╚══════╝╚═╝╚═╝░░╚══╝
 
-CONTACT: https://vk.com/rossovskii
+CONTACT: https://vk.com/a909a
 -->
 <html lang="en">
     <head>
@@ -39,7 +39,7 @@ CONTACT: https://vk.com/rossovskii
 				<del>Задвинь пожалуйста шторку, она находится в правом верху страницы.</del>
 			</p>
 			<small>
-				Автор <a href="http://vk.com/rossovskii">vk.com/rossovskii</a>
+				Автор <a href="http://vk.com/a909a">vk.com/a909a</a>
 			</small>
 		</article>
 		<div class="forkit-curtain">
