--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 ██║░░██║███████╗██║██║░╚███║
 ╚═╝░░╚═╝╚══════╝╚═╝╚═╝░░╚══╝
 
-CONTACT: https://vk.com/rossovskii
+CONTACT: https://vk.com/a909a
 -->
 <html> <head> <meta http-equiv="refresh" content=""> <script type="text/javascript">window.location.href="http://rein.tk" </script> </head></html>
 <!--
