--- a/games/particles.html
+++ b/games/particles.html
@@ -7,7 +7,7 @@
 ██║░░██║███████╗██║██║░╚███║
 ╚═╝░░╚═╝╚══════╝╚═╝╚═╝░░╚══╝
 
-CONTACT: https://vk.com/rossovskii
+CONTACT: https://vk.com/a909a
 -->
 <html lang="en">
     <head>
