--- a/discord.html
+++ b/discord.html
@@ -18,7 +18,7 @@ CONTACT: https://vk.com/a909a
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="default">
 		
-		<title>$ Ошибка $</title>
+		<title>₽ Discord ₽</title>
 		
 		<link rel="shortcut icon" href="assets/img/ava_site/my.ico">
 		<link href="assets/admin/css/discord.css" type="text/css" rel="stylesheet">
