--- a/tiktok.html
+++ b/tiktok.html
@@ -9,7 +9,7 @@
 
 CONTACT: https://vk.com/a909a
 -->
-<html><head><meta http-equiv="refresh" content=""><script type="text/javascript">window.location.href="https://tiktok.com/@thisrein"</script></head></html>
+<html><head><meta http-equiv="refresh" content=""><script type="text/javascript">window.location.href="https://tiktok.com/@mr_rein"</script></head></html>
 <!--
 Нука закрой исходный код, он тебе ненужон!
 -->
