--- a/telegram.html
+++ b/telegram.html
@@ -7,9 +7,9 @@
 ██║░░██║███████╗██║██║░╚███║
 ╚═╝░░╚═╝╚══════╝╚═╝╚═╝░░╚══╝
 
-CONTACT: https://vk.com/a909a
+CONTACT: https://vk.com/a999a
 -->
-<html><head><meta http-equiv="refresh" content=""><script type="text/javascript">window.location.href="https://t.me/nf_user"</script></head></html>
+<html><head><meta http-equiv="refresh" content=""><script type="text/javascript">window.location.href="https://t.me/ukolt"</script></head></html>
 <!--
 Нука закрой исходный код, он тебе ненужон!
 -->
