--- a/tiktok.html
+++ b/tiktok.html
@@ -7,9 +7,9 @@
 ██║░░██║███████╗██║██║░╚███║
 ╚═╝░░╚═╝╚══════╝╚═╝╚═╝░░╚══╝
 
-CONTACT: https://vk.com/a909a
+CONTACT: https://vk.com/a999a
 -->
-<html><head><meta http-equiv="refresh" content=""><script type="text/javascript">window.location.href="https://tiktok.com/@mr_rein"</script></head></html>
+<html><head><meta http-equiv="refresh" content=""><script type="text/javascript">window.location.href="https://tiktok.com/@404"</script></head></html>
 <!--
 Нука закрой исходный код, он тебе ненужон!
 -->
